frontend/test/should_fail/typeof_001.grg
rule r {
	x:Node -e:Edge-> y:Node;

	modify {
		x -f:typeof(e)- y;
	}
}
